# smili

./: .gitignore  .readthedocs.yml  LICENSE  README.md  configure  configure.ac  finufft.sample.pc  makefile  makefile.in  requirements.txt  setup.py
docker/: Dockerfile
docs/: Makefile  acknowledgement.rst  conf.py  examples.rst  index.rst  install.rst  license.rst  link.rst  make.bat  references.rst  requirements.txt
docs/_autodoc/: modules.rst  smili.imaging.rst  smili.uvdata.cltable.rst  smili.uvdata.rst  smili.uvdata.uvfits.rst  smili.uvdata.uvtable.rst
docs/_examples/: index.rst
docs/_examples/image/: BU_3C273_sampleimage.fits  image.fits  imfits.ipynb  save_test.fits
docs/_examples/imaging/: imaging.ipynb  plot_model_cphase.pdf.csv  plot_model_fcv.pdf.csv
docs/_examples/imregion/: imregion.csv  imregion.ipynb
docs/_examples/maps/: 3C345MAR18.UVP  maps.ipynb
docs/_examples/maps/.ipynb_checkpoints/: maps-checkpoint.ipynb
docs/_examples/uvdata/: 3C273_image.fits  cphase.csv  logcamp.csv  uvdata.ipynb
docs/_static/: acknowledgement.rst  install.rst  license.rst  link.rst  references.rst
docs/autodoc/: smili.imdata.rst  smili.rst
docs/examples/imaging/: 3C273DEC16.UVP  plot_model_logcamp.pdf.csv
docs/examples/imregion/: imregion.ipynb
docs/examples/uvdata/: 3C273DEC16.stokesI.uvfits  averaging.ipynb  uvdata.ipynb  visibility.csv
smili/: __init__.py  util.py
smili/array/: __init__.py  array.py
smili/ft/: __init__.py  ft_image.py
smili/geomodel/: __init__.py  geomodel.py  geomodel_theano.py
smili/imaging/: __init__.py  imager2d  imager2d.py  lbfgs.py  lbfgs3d.py  lbfgs_dft.py  lbfgs_fft3d.py  mfista.py  mfista_dft.py  mfista_fft.py
smili/imdata/: __init__.py  imdata.py  imregion.py  movie.py
smili/lightcurve/: __init__.py  lightcurve.py
smili/pyimager/: Imager2d.py  reg2d.py
smili/scattering/: __init__.py  model.py
smili/source/: __init__.py  source.py
smili/util/: __init__.py  gp.py  gvar.py  misc.py  plot.py  table.py  terminal.py  time.py  units.py  util.py
smili/uvdata/: __init__.py
smili/uvdata/cltable/: __init__.py  cltable.py
smili/uvdata/uvfits/: __init__.py  uvfits.py
smili/uvdata/uvtable/: __init__.py  bstable.py  catable.py  gvistable.py  tools.py  uvtable.py  vistable.py
src/finufft/: makefile  makefile.in  makefile_org
src/finufft/python_tests/: run_speed_tests.py
src/finufft/test/: dumbinputs
src/fortimlib/: funcs.f90  image.f90  param.f90  reg_l1_class.f90  reg_she_class.f90
src/fortlib/: coord.f90  dftim2d.f90  dftlib.f90  fftim2d.f90  fftim2dqu.f90  fftim3d.f90  fftlib.f90  fftlib3d.f90  fftlibqu.f90  finufft_fh.f90  houghlib.f90  image.f90  image3d.f90  imagequ.f90  imagequv.f90  interp.f90  makefile.in  param.f90  phasecon.f90  uvdata.f90
src/lbfgsb/: lbfgsb.f  makefile.in
src/mfista/: blas.h  finufft2d4smili.cpp  finufft_c.h  lapack.h  makefile.in  mfista.h  mfista_TV_lib.c  mfista_imaging_nufft.c  mfista_io.c  mfista_nufft_lib.c
src/mfista_old/: fft_data.txt  looe_lib.c  mfista_dft_lib.c  mfista_fft_lib.c  mfista_tools.c  readme.txt
src/wrapfinufft/: finufft_fh.f90  makefile.in  wrapfinufft.f90
